--- a/public/css/styles_member.css
+++ b/public/css/styles_member.css
@@ -46,6 +46,9 @@
   padding: 15px 30px 15px 15px;
   word-break: break-all;
 }
+.panel-body-content{
+  min-height: 32px;
+}
 .post-time{
   float: right;
   font-size: 12px;
@@ -67,21 +70,32 @@
   float: left;
   font-weight: 600;
 }
-.post-user-name>p{
+.response-user-name{
+  float: left;
+  font-weight: bolder;
+}
+.post-user-name>p,.response-user-name>p{
   margin: 0px 10px;
   line-height: 32px;
 }
 .post-user-img{
-  width: 32px;
+  padding-top: 4px;
+  width: 24px;
   height: 32px;
   float: left;
 }
 .post-user-img img{
-  width: 100%;
-  height: 100%;
+  width: 24px;
+  height: 24px;
   border-radius: 50%;
   float: left;
   background-color: #fff;
+}
+.response-user-img img{
+  width: 24px;
+  height: 24px;
+  float: left;
+  border-radius: 50%;
 }
 .edit-i{
   margin: 0;
